--- a/frontend/github-app/src/app/app.component.html
+++ b/frontend/github-app/src/app/app.component.html
@@ -1,3 +1,9 @@
-<div class="grid grid-flow-row auto-rows-max">
+<div
+  class="dark:bg-gray-800 font-sans"
+  [ngClass]="{
+    dark: (darkMode | async)
+  }"
+>
+  <app-nav></app-nav>
   <app-repo-list></app-repo-list>
 </div>
