se agrega concurrently e instalacion automatica y docs

--- a/frontend/github-app/src/app/app.component.html
+++ b/frontend/github-app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div
-  class="dark:bg-gray-800 font-sans"
+  class="grid grid-cols-1 dark:bg-gray-800 font-sans"
   [ngClass]="{
     dark: (darkMode | async)
   }"
