--- a/frontend/github-app/src/app/components/repo-list/repo-list.component.html
+++ b/frontend/github-app/src/app/components/repo-list/repo-list.component.html
@@ -1,17 +1,11 @@
 <div *ngIf="loaded">
   <ul
     role="list"
-    class="p-6 divide-y divide-slate-100 dark:bg-gray-800"
-    [ngClass]="{
-      dark: (darkMode | async)
-    }"
+    class="p-6 divide-y divide-slate-100 dark:bg-gray-800 xl:px-96"
   >
     <li
       *ngFor="let commit of commits"
       class="flex items-stretch py-4 first:pt-0 last:pb-0 dark:bg-gray-800"
-      [ngClass]="{
-        dark: (darkMode | async)
-      }"
     >
       <img class="h-10 w-10 rounded-full" src="{{ commit.avatar }}" alt="" />
 
