--- a/frontend/github-app/src/app/components/repo-list/repo-list.component.html
+++ b/frontend/github-app/src/app/components/repo-list/repo-list.component.html
@@ -1,29 +1,11 @@
 <div *ngIf="loaded">
-  <ul
-    role="list"
-    class="p-6 divide-y divide-slate-100 dark:bg-gray-800 xl:px-96"
-  >
-    <li
+  <ul role="list" class="dark:bg-gray-800 xl:px-96">
+    <app-repo-item
+      role="list"
+      class="p-6 dark:bg-gray-800 xl:px-96"
       *ngFor="let commit of commits"
-      class="flex items-stretch py-4 first:pt-0 last:pb-0 dark:bg-gray-800"
-    >
-      <img class="h-10 w-10 rounded-full" src="{{ commit.avatar }}" alt="" />
-
-      <div class="ml-3 overflow-hidden">
-        <p class="text-sm font-medium text-slate-900 dark:text-white">
-          {{ commit.author }}
-        </p>
-        <p class="text-sm text-slate-500 truncate dark:text-white">
-          {{ commit.date | date: "fullDate" }}
-        </p>
-        <p class="text-sm text-slate-500 truncate dark:text-white">
-          Sha: {{ commit.sha }}
-        </p>
-        <p class="text-sm text-slate-500 truncate dark:text-white">
-          Comment: {{ commit.description }}
-        </p>
-      </div>
-    </li>
+      [commit]="commit"
+    ></app-repo-item>
   </ul>
 </div>
 <div *ngIf="!loaded">
